dynamic-routing/service-canary.yml
apiVersion: v1
kind: Service
metadata:
  name: smart-canary-service
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: smart-rollouts-demo
