dynamic-routing/all-routes.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-smart-route
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /smart/ 
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: / 
    backendRefs:
     - name: argo-rollouts-stable-service
       kind: Service
       port: 80
     - name: argo-rollouts-canary-service
       kind: Service
       port: 80
---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: always-stable-route
# spec:
#   parentRefs:
#     - name: traefik-gateway
#       namespace: default
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /always-stable  
#     filters:
#       - type: URLRewrite
#         urlRewrite:
#           path:
#             type: ReplacePrefixMatch
#             replacePrefixMatch: / 
#     backendRefs:
#      - name: argo-rollouts-stable-service
#        kind: Service
#        port: 80
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: always-preview-route
# spec:
#   parentRefs:
#     - name: traefik-gateway
#       namespace: default 
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /always-preview  
#     filters:
#       - type: URLRewrite
#         urlRewrite:
#           path:
#             type: ReplacePrefixMatch
#             replacePrefixMatch: /
#     backendRefs:
#      - name: argo-rollouts-canary-service
#        kind: Service
#        port: 80
