dynamic-routing/smart-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-smart-route
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /     
        # value: /smart/ 
    # filters:
    #   - type: URLRewrite
    #     urlRewrite:
    #       path:
    #         type: ReplacePrefixMatch
    #         replacePrefixMatch: / 
    backendRefs:
     - name: argo-rollouts-stable-service
       kind: Service
       port: 80
     - name: argo-rollouts-canary-service
       kind: Service
       port: 80
